# monorepo

./: .gitignore  BUILD  Earthfile  Makefile  README  README.md  WORKSPACE  bazel-bin  bazel-monorepo  bazel-out  bazel-testlogs  deps.bzl  docker-compose.yaml  go.mod  go.sum
.github/workflows/: apiGateway.yml  go.yml  libs.yml  serviceOne.yml  serviceTwo.yml
libs/hello/: Earthfile  go.mod  hello.go  hello_test.go
services/one/: .semver.yaml  Earthfile  go.mod  main.go  main_test.go
services/one/hello/: Earthfile  hello.go
services/two/: Earthfile  go.mod  main.go  main_test.go
src/api_gateway/: .env  BUILD.bazel  Makefile  main.go  main_test.go
src/api_gateway/ci/: BUILD.bazel  container.go
src/api_gateway/configs/: BUILD.bazel  config.go  models.csv
src/api_gateway/constants/: BUILD.bazel  error.go
src/api_gateway/dependencies/: BUILD.bazel  grpc_connections.go  redis_connection.go
src/api_gateway/handlers/: BUILD.bazel  handler.go
src/api_gateway/handlers/auth_handler/: BUILD.bazel  auth_handle.go  response.go
src/api_gateway/handlers/customer_handler/: BUILD.bazel  customer_handler.go
src/api_gateway/handlers/models/: auth_handle.go
src/api_gateway/logger/: BUILD.bazel  logger.go
src/api_gateway/middleware/: BUILD.bazel  auth.go  logging.go  recover.go  tracer.go
src/api_gateway/models/: BUILD.bazel  auth.go  auth_models.go  otp_structure.go
src/api_gateway/pkg/log/: BUILD.bazel
src/api_gateway/pkg/tracing/: BUILD.bazel  init.go  mux.go
src/api_gateway/routers/: BUILD.bazel  auth_router.go  customer_router.go  router.go
src/api_gateway/tracer/: BUILD.bazel  tracer.go
src/api_gateway/utils/: BUILD.bazel  enum.go  jwt_generator.go  jwt_parser.go  otp_structure.go  web_utils.go
src/auth_service/: .env  BUILD.bazel  Makefile  main.go  main_test.go
src/auth_service/configs/: BUILD.bazel  config.go  models.csv  rbac_model.conf
src/auth_service/pkg/db/: BUILD.bazel  db.go
src/auth_service/pkg/db/migration/: 000001_initial_setup.up.sql
src/auth_service/pkg/db/migrations/: 000001_initial_setup.down.sql  000001_initial_setup.up.sql  20221111063708_initialize_schema.up.sql
src/auth_service/pkg/entity/: BUILD.bazel  entity.go
src/auth_service/pkg/mappers/: BUILD.bazel  mapper.go
src/auth_service/service/: BUILD.bazel  auth.go  staff_auth.go
src/auth_service/src/idl/: auth.pb.go  auth_grpc.pb.go
src/auth_service/storage/: BUILD.bazel  storage.go
src/auth_service/storage/postgres/: BUILD.bazel  auth.go  staff_auth.go
src/auth_service/storage/repo/: BUILD.bazel  auth.go  staff_auth.go
src/customer_service/: .env  BUILD.bazel  Makefile  main.go
src/customer_service/configs/: BUILD.bazel  config.go
src/customer_service/pkg/db/: BUILD.bazel  db.go
src/customer_service/server/: BUILD.bazel  grpc.go
src/customer_service/service/: BUILD.bazel  customer.go
src/customer_service/storage/: BUILD.bazel  storage.go
src/customer_service/storage/postgres/: BUILD.bazel  customer.go
src/customer_service/storage/repo/: BUILD.bazel  customer.go
src/customer_service/tracer/: BUILD.bazel  tracer.go
src/idl/auth_service/: BUILD.bazel  auth.pb.go  auth.proto  staff_auth.pb.go  staff_auth.proto
src/idl/customer_service/: BUILD.bazel  customer_service.pb.go  customer_service.proto
src/libs/etc/: BUILD.bazel  code_generator.go  password_hash.go
src/libs/hello/: BUILD.bazel  hello.go  hello_test.go
src/libs/jwt/: BUILD.bazel  jwt.go
src/libs/log/: BUILD.bazel
src/libs/logger/: BUILD.bazel  logger.go
src/libs/redis/: BUILD.bazel  redis.go
src/libs/tracer/: BUILD.bazel  init.go
src/libs/utils/: BUILD.bazel  email.go  enum.go  parseTemplate.go  sms.go  validate.go
src/service-one/: BUILD.bazel  main.go  main_test.go
src/service-one/cmd/: BUILD.bazel  main.go  main_test.go
src/service-one/pkg/helloInService1/: BUILD.bazel
src/service-two/: BUILD.bazel  main.go  main_test.go
src/service-two/cmd/: BUILD.bazel  main.go  main_test.go
