load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_gateway_lib",
    srcs = ["main.go"],
    importpath = "monorepo/src/api_gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//src/api_gateway/configs",
        "//src/api_gateway/handlers",
        "//src/api_gateway/logger",
        "//src/api_gateway/middleware",
        "//src/api_gateway/routers",
        "@com_github_gorilla_mux//:mux",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_fx//fxevent",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "api_gateway",
    embed = [":api_gateway_lib"],
    visibility = ["//visibility:public"],
)
