load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_gateway_lib",
    srcs = ["main.go"],
    data = [
        ".env",
    ],
    importpath = "monorepo/src/api_gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//src/api_gateway/configs",
        "//src/api_gateway/handlers",
        "//src/api_gateway/pkg/tracing",
        "//src/api_gateway/routers",
        "//src/libs/log",
        "//src/libs/tracer",
        "//vendor/github.com/opentracing/opentracing-go",
        "//vendor/github.com/uber/jaeger-lib/metrics/expvar",
        "//vendor/go.uber.org/fx",
        "//vendor/go.uber.org/fx/fxevent",
        "//vendor/go.uber.org/zap",
        "//vendor/go.uber.org/zap/zapcore",
    ],
)

go_binary(
    name = "api_gateway",
    embed = [":api_gateway_lib"],
    visibility = ["//visibility:public"],
)
