load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "auth_service_lib",
    srcs = ["main.go"],
    importpath = "monorepo/src/auth_service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/auth_service/configs",
        "//src/auth_service/pkg/db",
        "//src/auth_service/service",
        "//src/auth_service/storage",
        "//src/idl/auth_service",
        "//src/libs/logger",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "auth_service",
    embed = [":auth_service_lib"],
    visibility = ["//visibility:public"],
)
