load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "auth_service_lib",
    srcs = ["main.go"],
    data = [
        ".env",
    ],
    importpath = "monorepo/src/auth_service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/auth_service/configs",
        "//src/auth_service/pkg/db",
        "//src/auth_service/service",
        "//src/auth_service/storage",
        "//src/idl/auth_service",
        "//src/libs/log",
        "//src/libs/tracer",
        "//vendor/github.com/opentracing-contrib/go-grpc",
        "//vendor/github.com/uber/jaeger-lib/metrics/expvar",
        "//vendor/go.uber.org/zap",
        "//vendor/go.uber.org/zap/zapcore",
        "//vendor/google.golang.org/grpc",
    ],
)

go_binary(
    name = "auth_service",
    embed = [":auth_service_lib"],
    visibility = ["//visibility:public"],
)
