load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "customer_service_lib",
    srcs = ["main.go"],
    data = [
        ".env",
    ],
    importpath = "monorepo/src/customer_service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/customer_service/configs",
        "//src/customer_service/pkg/db",
        "//src/customer_service/server",
        "//src/customer_service/service",
        "//src/customer_service/storage",
        "//src/customer_service/tracer",
        "//src/libs/log",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_fx//fxevent",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "customer_service",
    embed = [":customer_service_lib"],
    visibility = ["//visibility:public"],
)
