load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "service-two_lib",
    srcs = ["main.go"],
    importpath = "monorepo/src/service-two",
    visibility = ["//visibility:private"],
    deps = [
        "//src/libs/hello",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "service-two",
    embed = [":service-two_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "service-two_test",
    srcs = ["main_test.go"],
    embed = [":service-two_lib"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "go_image",
    embed = [":service-two_lib"],
    importpath = "monorepo/service-two",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "image",
    base = ":go_image",
    repository = "khdoba" ## Replace <username> with your DockerHub ID, or any repository ID:
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io", ## Replace <index.docker.io> with your docker registry
    repository = "khdoba/service-two", ## Replace <khdoba/service-one> with repository path
)