load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ci",
    srcs = ["container.go"],
    importpath = "monorepo/src/api_gateway/ci",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api_gateway/configs",
        "//src/libs/redis",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_gomodule_redigo//redis",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ci",
    visibility = ["//visibility:public"],
)
