load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ci",
    srcs = ["container.go"],
    importpath = "monorepo/src/api_gateway/ci",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api_gateway/configs",
        "//src/libs/redis",
        "//vendor/github.com/gomodule/redigo/redis",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ci",
    visibility = ["//visibility:public"],
)
