load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configs",
    srcs = ["config.go"],
    data = [
        "models.csv",
        "rbac_model.conf",
    ],
    importpath = "monorepo/src/api_gateway/configs",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/joho/godotenv",
        "//vendor/github.com/spf13/viper",
    ],
)

alias(
    name = "go_default_library",
    actual = ":configs",
    visibility = ["//visibility:public"],
)
