load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dependencies",
    srcs = ["grpc_connections.go"],
    importpath = "monorepo/src/api_gateway/dependencies",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api_gateway/configs",
        "//src/idl/auth_service",
        "//vendor/github.com/opentracing-contrib/go-grpc",
        "//vendor/github.com/opentracing/opentracing-go",
        "//vendor/google.golang.org/grpc",
        "//vendor/google.golang.org/grpc/credentials/insecure",
    ],
)

alias(
    name = "go_default_library",
    actual = ":dependencies",
    visibility = ["//visibility:public"],
)
