load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "monorepo/src/api_gateway/logger",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":logger",
    visibility = ["//visibility:public"],
)
