load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "auth.go",
        "logging.go",
        "recover.go",
        "tracer.go",
    ],
    importpath = "monorepo/src/api_gateway/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api_gateway/configs",
        "//src/libs/jwt",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@com_github_uber_jaeger_client_go//:jaeger-client-go",
        "@com_github_uber_jaeger_client_go//config",
    ],
)

alias(
    name = "go_default_library",
    actual = ":middleware",
    visibility = ["//visibility:public"],
)
