load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "auth.go",
        "otp_structure.go",
    ],
    importpath = "monorepo/src/api_gateway/models",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":models",
    visibility = ["//visibility:public"],
)
