load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routers",
    srcs = [
        "customer_router.go",
        "router.go",
    ],
    importpath = "monorepo/src/api_gateway/routers",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api_gateway/handlers",
        "//src/api_gateway/pkg/tracing",
    ],
)

alias(
    name = "go_default_library",
    actual = ":routers",
    visibility = ["//visibility:public"],
)
