load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracer",
    srcs = ["tracer.go"],
    importpath = "monorepo/src/api_gateway/tracer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_uber_jaeger_client_go//:jaeger-client-go",
        "@com_github_uber_jaeger_client_go//config",
        "@org_uber_go_fx//:fx",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tracer",
    visibility = ["//visibility:public"],
)
