load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "jwt_generator.go",
        "jwt_parser.go",
        "web_utils.go",
    ],
    importpath = "monorepo/src/api_gateway/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api_gateway/configs",
        "//src/libs/jwt",
        "//vendor/github.com/dgrijalva/jwt-go",
        "//vendor/github.com/google/uuid",
        "//vendor/google.golang.org/grpc/codes",
        "//vendor/google.golang.org/grpc/status",
    ],
)

alias(
    name = "go_default_library",
    actual = ":utils",
    visibility = ["//visibility:public"],
)
