load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configs",
    srcs = ["config.go"],
    importpath = "monorepo/src/auth_service/configs",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/joho/godotenv",
        "//vendor/github.com/spf13/viper",
    ],
)

alias(
    name = "go_default_library",
    actual = ":configs",
    visibility = ["//visibility:public"],
)
