load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["staff_auth.go"],
    importpath = "monorepo/src/auth_service/service",
    visibility = ["//visibility:public"],
    deps = [
        "//src/auth_service/storage",
        "//src/idl/auth_service",
        "//src/libs/log",
        "//vendor/github.com/opentracing/opentracing-go",
        "//vendor/go.uber.org/zap",
        "//vendor/golang.org/x/crypto/bcrypt",
        "//vendor/google.golang.org/grpc/codes",
        "//vendor/google.golang.org/grpc/status",
    ],
)

alias(
    name = "go_default_library",
    actual = ":service",
    visibility = ["//visibility:public"],
)
