load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "hello",
    srcs = ["hello.go"],
    importpath = "monorepo/src/libs/hello",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":hello",
    visibility = ["//visibility:public"],
)
