load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "jwt",
    srcs = ["jwt.go"],
    importpath = "monorepo/src/libs/jwt",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/dgrijalva/jwt-go"],
)

alias(
    name = "go_default_library",
    actual = ":jwt",
    visibility = ["//visibility:public"],
)
