load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = [
        "factory.go",
        "logger.go",
        "spanlogger.go",
    ],
    importpath = "monorepo/src/libs/log",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/opentracing/opentracing-go",
        "//vendor/github.com/opentracing/opentracing-go/ext",
        "//vendor/github.com/opentracing/opentracing-go/log",
        "//vendor/github.com/uber/jaeger-client-go",
        "//vendor/go.uber.org/zap",
        "//vendor/go.uber.org/zap/zapcore",
    ],
)

alias(
    name = "go_default_library",
    actual = ":log",
    visibility = ["//visibility:public"],
)
