load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "redis",
    srcs = ["redis.go"],
    importpath = "monorepo/src/libs/redis",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gomodule_redigo//redis"],
)

alias(
    name = "go_default_library",
    actual = ":redis",
    visibility = ["//visibility:public"],
)
