load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "redis",
    srcs = ["redis.go"],
    importpath = "monorepo/src/libs/redis",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/gomodule/redigo/redis"],
)

alias(
    name = "go_default_library",
    actual = ":redis",
    visibility = ["//visibility:public"],
)
